  passing "uploadmsg" parameter in the url
* (bug 9947) Add PROTECTIONLEVEL parser function to return the protection level
  for the current page for a given action
* Added "__\" magic word to eat up all whitespace and newlines to the next 
  non-whitespace character, to facilitate writing readable template code where
  whitespace is significant. 
* (bug 17002) Add &minor= and &summary= as parameters in the url when editing, to automatically add a summary or a minor edit.
  
=== Bug fixes in 1.15 ===
* Fixing the caching issue by using -{T|xxx}- syntax (only applies on wiki with LanguageConverter class)
* Improving the efficiency by using -{A|xxx}- syntax (only applies on wiki with LanguageConverter class)
* (bug 16968) Special:Upload no longer throws useless warnings.
* (bug 15470) Special:Upload no longer force-capitalizes titles
* (bug 17000) Special:RevisionDelete now checks if the database is locked before trying to delete the edit.

== API changes in 1.15 ==
* (bug 16798) JSON encoding errors for some characters outside the BMP
* (bug 16629) prop=info&inprop=protection lists empty legacy protections
  incorrectly
* (bug 16858) Revamped list=deletedrevs to make listing deleted contributions
  and listing all deleted pages possible
* (bug 16844) Added clcategories parameter to prop=categories

=== Languages updated in 1.15 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed.

== Compatibility ==

MediaWiki 1.15 requires PHP 5 (5.2 recommended). PHP 4 is no longer supported.

PHP 5.0.x fails on 64-bit systems due to serious bugs with array processing:
http://bugs.php.net/bug.php?id=34879
Upgrade affected systems to PHP 5.1 or higher.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.15 has several database changes since 1.14, and will not work without schema